--- a/src/app/components/poly-list/poly-element-list/poly-element-list.component.html
+++ b/src/app/components/poly-list/poly-element-list/poly-element-list.component.html
@@ -3,5 +3,6 @@
         <app-poly-direct-link-element *ngIf="element.type==='direct-link'" [element]="element"></app-poly-direct-link-element>
         <app-poly-with-children-element *ngIf="element.type==='with-children'" [element]="element"></app-poly-with-children-element>
         <app-poly-in-subpage-url-element *ngIf="element.type==='in-subpage-url'" [element]="element"></app-poly-in-subpage-url-element >
+        <app-poly-country-element *ngIf="element.type==='country'" [element]="element"></app-poly-country-element >
     </div>
 </div>
