--- a/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
+++ b/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
@@ -5,13 +5,19 @@
     [attr.data-bs-target]="'#flush-' + getId(element.title)" 
     aria-expanded="false" 
     [attr.aria-controls]="'flush-' + getId(element.title)">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus"
-    viewBox="0 0 16 16">
-    <path
-        d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-    </svg>
-        <span *ngIf="element.key">{{element.key | transloco}}</span>
-        <span *ngIf="!element.key">{{element.title}}</span>
+        <h3 *ngIf="element.title==='Elvetia'"> 
+            <span class="flag-dropdown fi fi-ch"></span>
+            <span>{{element.key | transloco}}</span> 
+        </h3>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus"
+        viewBox="0 0 16 16">
+        <path
+            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+        </svg>
+        
+       
+        <span *ngIf="element.key && element.title!=='Elvetia'"> {{element.key | transloco}}</span>
+        <span *ngIf="!element.key && element.title!=='Elvetia'">{{element.title}}</span>
     </a>
     <div id="flush-{{getId(element.title)}}" class="accordion-collapse collapse" 
     [attr.data-bs-parent]="'#{{element.title}}'">
