--- a/src/app/components/vehicle-info/vehicle-info.component.html
+++ b/src/app/components/vehicle-info/vehicle-info.component.html
@@ -2,4 +2,4 @@
     <h1>{{ 'menu.vehicle-info' | transloco }}</h1>
 </div>
 
-<app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
