--- a/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
+++ b/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
@@ -9,6 +9,9 @@
             <span class="flag-dropdown fi fi-{{element.countryCode}}"></span>
             <span>{{element.key | transloco}}</span> 
         </h3>
+        <h3 *ngIf="!element.countryCode"> 
+            <span>{{element.key | transloco}}</span> 
+        </h3>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus"
         viewBox="0 0 16 16">
         <path
@@ -25,6 +28,7 @@
                 <app-poly-direct-link-element *ngIf="elementChild.type === 'direct-link'" [element]="elementChild"></app-poly-direct-link-element>
                 <app-poly-in-subpage-url-element *ngIf="elementChild.type === 'in-subpage-url'" [element]="elementChild"></app-poly-in-subpage-url-element>
                 <app-poly-country-element *ngIf="elementChild.type === 'country'" [element]="elementChild" ></app-poly-country-element>
+                <app-poly-with-children-element *ngIf="elementChild.type === 'with-children'" [element]="elementChild" ></app-poly-with-children-element >
             </div>
         </div>
     </div>
