--- a/src/app/components/technical-check/technical-check.component.html
+++ b/src/app/components/technical-check/technical-check.component.html
@@ -1,4 +1,5 @@
 <div class="page-title">
     <h1>{{ 'menu.technical-check' | transloco }}</h1>
 </div>
-<app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation>
+<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
+<!-- <app-country-navigation [contentFileName]="contentFileName" ></app-country-navigation> -->
