--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -163,7 +163,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://t.me/+oRxP0wWbhM8yNzlk" target="_blank">
+                        <a class="nav-link" href="https://t.me/+MPQ8BrU7tcYzMTFk" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-telegram" viewBox="0 0 16 16">
                                 <path
