--- a/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
+++ b/src/app/components/poly-list/poly-with-children-element/poly-with-children-element.component.html
@@ -9,7 +9,8 @@
             <span class="flag-dropdown fi fi-{{element.countryCode}}"></span>
             <span>{{element.key | transloco}}</span> 
         </h3>
-        <span *ngIf="!element.countryCode">{{element.key | transloco}}</span> 
+        <span *ngIf="!element.countryCode && element.key">{{element.key | transloco}}</span> 
+        <span *ngIf="!element.countryCode && !element.key">{{element.title | transloco}}</span> 
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus"
         viewBox="0 0 16 16">
         <path
