--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -152,7 +152,7 @@
                             {{ 'menu.android-app' | transloco }}
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#" data-bs-dismiss="offcanvas">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-chat-square-text-fill" viewBox="0 0 16 16">
@@ -161,7 +161,7 @@
                             </svg>
                             {{ 'menu.forum' | transloco }}
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="https://t.me/+MPQ8BrU7tcYzMTFk" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
