--- a/src/app/components/travel-docs-samples/travel-docs-samples.component.html
+++ b/src/app/components/travel-docs-samples/travel-docs-samples.component.html
@@ -2,4 +2,4 @@
     <h1>{{ 'menu.specimens' | transloco }}</h1>
 </div>
 
-<app-poly-element-list [contentFileName]="contentFileName"></app-poly-element-list>
+<app-poly-element-list [contentFileName]="contentFileName" [shouldDisplayList]="false"></app-poly-element-list>
