--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,6 +22,9 @@
       <h5 class="card-title">Bine ai venit, {{getUserName()}}</h5>
       <p class="card-text">Foloseste meniul din dreapta sus pentru navigare</p>
       <a *ngIf="shouldShowLoginButton()" class="btn btn-secondary" routerLink="/login">Login</a>
-      <a class="btn btn-warning" [routerLink]="['/update-user', getUserId()]">Update Profile</a>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <a class="btn btn-warning" [routerLink]="['/update-user', getUserId()]">Update Profile</a>
+        <a *ngIf="hasAccessToTiaf" class="btn btn-secondary" [routerLink]="['/tiaf-app']">Acces TIAF</a>
+      </div>
     </div>
 </div>
