--- a/src/app/components/user-management/user-management.component.html
+++ b/src/app/components/user-management/user-management.component.html
@@ -112,7 +112,7 @@
                         <label class="form-check-label" for="flexSwitchCheckDefault">Cere Acces Tiaf</label>
                     </div>
                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" (click)="updateAccessTiafAccess(user)">
+                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" [checked]="user.hasTiafAccess" (click)="updateAccessTiafAccess(user)">
                         <label class="form-check-label" for="flexSwitchCheckDefault">Acces Tiaf</label>
                     </div>
                 </div>
