fix tiaf access

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,7 +24,7 @@
       <a *ngIf="shouldShowLoginButton()" class="btn btn-secondary" routerLink="/login">Login</a>
       <div class="d-grid gap-2 col-7 mx-auto">
         <a class="btn btn-warning" [routerLink]="['/update-user', getUserId()]">Update Profile</a>
-        <a *ngIf="hasAccessToTiaf" class="btn btn-secondary" href="https://drive.google.com/drive/folders/1hTegKqNbbz10A9ytPtK2usYQGXdZDTll">Cere Acces TIAF</a>
+        <a *ngIf="canRequestAccessToTiaf" class="btn btn-secondary" href="https://drive.google.com/drive/folders/1hTegKqNbbz10A9ytPtK2usYQGXdZDTll">Cere Acces TIAF</a>
         <a *ngIf="hasAccessToTiaf" class="btn btn-secondary" [routerLink]="['/tiaf-app']">Acces TIAF</a>
       </div>
     </div>
