--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -179,7 +179,7 @@
                         <a class="nav-link" routerLink="/user-management" data-bs-dismiss="offcanvas">User Management</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-dismiss="offcanvas">Privacy Policy</a>
+                        <a class="nav-link" href="https://rawcdn.githack.com/stefffy79/Privacy-Policy/ceb338a3b69034fc9ecb13a38fab4a6fc789ec53/Privacy%20Policy" data-bs-dismiss="offcanvas">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <button class="nav-link" (click)="logout()" data-bs-dismiss="offcanvas">Logout</button>
