--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -179,7 +179,7 @@
                         <a class="nav-link" routerLink="/user-management" data-bs-dismiss="offcanvas">User Management</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-dismiss="offcanvas">Privacy Policy</a>
+                        <a class="nav-link" href="https://www.socialcreator.com/verificari/?s=288779" data-bs-dismiss="offcanvas">Privacy Policy</a>
                     </li>
                     <li class="nav-item">
                         <button class="nav-link" (click)="logout()" data-bs-dismiss="offcanvas">Logout</button>
