--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -162,7 +162,7 @@
                             {{ 'menu.forum' | transloco }}
                         </a>
                     </li> -->
-                    <!-- <li class="nav-item">
+                  <li class="nav-item">
                         <a class="nav-link" href="https://t.me/+MPQ8BrU7tcYzMTFk" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                 class="bi bi-telegram" viewBox="0 0 16 16">
@@ -171,7 +171,7 @@
                             </svg>
                             {{ 'menu.telegram-group' | transloco }}
                         </a>
-                    </li> -->
+                    </li>
                     <li class="nav-item">
                         <hr class="bg-light">
                     </li>
