--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -152,9 +152,8 @@
                             {{ 'menu.android-app' | transloco }}
                         </a>
                     </li>
-                  <li class="nav-item">
+                 <!-- <li class="nav-item">
     <a class="nav-link" href="https://buymeacoffee.com/" target="_blank" rel="noopener noreferrer">
-        <!-- Pictogramă BuyMeACoffee SVG (poți înlocui cu una oficială dacă ai un fișier SVG/logo) -->
         <svg xmlns="https://logowik.com/buy-me-a-coffee-logo-vector-svg-pdf-ai-eps-cdr-free-download-17252.html"
             width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
             <path
