--- a/src/app/components/ww-lookup/ww-lookup.component.scss
+++ b/src/app/components/ww-lookup/ww-lookup.component.scss
@@ -1,19 +1,13 @@
 .ww-lookup {
-  display: flex;
-  justify-content: center;
   padding: 1rem;
 }
 
 .search-form {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
+  margin-top: 0.5rem;
 }
 
-.search-form input {
-  padding: 0.5rem 0.75rem;
-}
-
-.search-form button {
-  padding: 0.5rem 0.75rem;
+@media (min-width: 576px) {
+  .search-form {
+    margin-top: 1rem;
+  }
 }
