--- a/src/app/components/poly-list/poly-in-subpage-url-element/poly-in-subpage-url-element.component.html
+++ b/src/app/components/poly-list/poly-in-subpage-url-element/poly-in-subpage-url-element.component.html
@@ -1,5 +1,19 @@
-<a *ngIf="element" [routerLink]="element.data ? ['/', element.url, element.data] : ['/', element.url]" class="list-group-item list-group-item-action menu-item">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+<a *ngIf="element" [routerLink]="element.data ? ['/', element.url, element.data] : ['/', element.url]"
+    class="list-group-item list-group-item-action menu-item">
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+        class="bi bi-link-45deg" viewBox="0 0 16 16">
+        <path
+            d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+        <path
+            d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 1 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 1 0-4.243-4.243L6.586 4.672z" />
+    </svg> -->
+    <svg *ngIf="element.icon === 'search'" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+        class="bi bi-search" viewBox="0 0 16 16">
+        <path
+            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85zm-5.242.656a5 5 0 1 1 0-10 5 5 0 0 1 0 10z" />
+    </svg>
+
+    <svg *ngIf="element.icon !== 'search'" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
         class="bi bi-link-45deg" viewBox="0 0 16 16">
         <path
             d="M4.715 6.542 3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.002 1.002 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
